--- a/application.html
+++ b/application.html
@@ -11,7 +11,7 @@ th {background: #336699; color: #FFFFFF; text-align: left;}
 </head>
 <body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
 <hr size="1" noshade>
-Log session start time Thu Mar 09 23:40:01 IST 2023<br>
+Log session start time Fri Mar 10 14:59:51 IST 2023<br>
 <br>
 <table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
 <tr>
@@ -28,7 +28,7 @@ Log session start time Thu Mar 09 23:40:01 IST 2023<br>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:40</td>
+<td>commonMethods.java:41</td>
 <td title="Message">The original playlist would look like -&gt;&gt; </td>
 </tr>
 
@@ -37,132 +37,141 @@ Log session start time Thu Mar 09 23:40:01 IST 2023<br>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S1 </td>
 </tr>
 
 <tr>
-<td>4</td>
+<td>5</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S2 </td>
 </tr>
 
 <tr>
-<td>4</td>
+<td>5</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S3 </td>
 </tr>
 
 <tr>
-<td>9</td>
+<td>13</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:34</td>
+<td>commonMethods.java:35</td>
 <td title="Message">When S4 song is played, the playlist looks like -&gt;&gt; </td>
 </tr>
 
 <tr>
-<td>9</td>
+<td>13</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S2 </td>
 </tr>
 
 <tr>
-<td>9</td>
+<td>14</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S3 </td>
 </tr>
 
 <tr>
-<td>9</td>
+<td>14</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S4 </td>
 </tr>
 
 <tr>
-<td>12</td>
+<td>17</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:36</td>
+<td>commonMethods.java:37</td>
 <td title="Message">When S2 song is played, the playlist looks like -&gt;&gt; </td>
 </tr>
 
 <tr>
-<td>12</td>
+<td>17</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S3 </td>
 </tr>
 
 <tr>
-<td>12</td>
+<td>17</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S4 </td>
 </tr>
 
 <tr>
-<td>12</td>
+<td>18</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S2 </td>
 </tr>
 
 <tr>
-<td>13</td>
+<td>18</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:38</td>
+<td>commonMethods.java:39</td>
 <td title="Message">When S1 song is played, the playlist looks like -&gt;&gt; </td>
 </tr>
 
 <tr>
-<td>13</td>
+<td>18</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S4 </td>
 </tr>
 
 <tr>
-<td>13</td>
+<td>18</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S2 </td>
 </tr>
 
 <tr>
-<td>13</td>
+<td>19</td>
 <td title="main thread">main</td>
 <td title="Level">INFO</td>
 <td title="common.commonMethods category">common.commonMethods</td>
-<td>commonMethods.java:43</td>
+<td>commonMethods.java:44</td>
 <td title="Message">S1 </td>
+</tr>
+
+<tr>
+<td>21</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#993300"><strong>ERROR</strong></font></td>
+<td title="common.commonMethods category">common.commonMethods</td>
+<td>commonMethods.java:20</td>
+<td title="Message">Size of queue is full</td>
 </tr>
